--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-streamlit==1.32.0
-pandas==2.2.2
-openpyxl==3.1.2
-python-docx==1.1.0
-PyMuPDF==1.23.26
-Pillow==10.3.0
-groq==0.4.2
-httpx==0.24.1
+streamlit
+pandas
+openpyxl
+python-docx
+PyMuPDF
+Pillow
+requests
 
