--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit
-pandas
-openpyxl
-python-docx
-PyMuPDF
-Pillow
-requests
+streamlit==1.32.0
+pandas==2.2.2
+openpyxl==3.1.2
+python-docx==1.1.0
+PyMuPDF==1.23.26
+Pillow==10.3.0
+requests==2.31.0
+
